Remove Security Manager-dependent test paths